@@ -1,5 +1,12 @@
 2007-12-10  Neal H. Walfield  <neal@gnu.org>
 
+	* mutex.h: New file.
+	* Makefile.am (includehurd_HEADERS): Add mutex.h.
+	* headers.m4: Create link from ../include/hurd/mutex.h to
+	hurd/mutex.h.
+
+2007-12-10  Neal H. Walfield  <neal@gnu.org>
+
 	* activity.h (RM_activity_create): Don't define.
 	(activity_create): Remove method.
 
